force-app/main/default/objects/leaseworks__Fleet_Summary__c/leaseworks__Fleet_Summary__c.object-meta.xml
<CustomObject>
    <description>[MODULE: NA]
[LOAD: No]
[PREREQUISITES: NA]
[REPLACEMENT OBJECT API: NA]
[COMMENTS: NA]</description>
    <label>Fleet Summary</label>
    <nameField>
        <label>Fleet Summary Stats Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Fleet Summary</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>