force-app/main/default/objects/leaseworks__Fleet_Summary__c/fields/leaseworks__Aircraft_Type__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Aircraft_Type__c</fullName>
    <label>Aircraft Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>