force-app/main/default/objects/leaseworks__Fleet_Summary__c/fields/leaseworks__Lessor__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Lessor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Z_Unused_2206 Lessor</label>
    <referenceTo>leaseworks__Counterparty__c</referenceTo>
    <relationshipLabel>Fleet Summary</relationshipLabel>
    <relationshipName>Fleet_Summary</relationshipName>
    <type>Lookup</type>
</CustomField>