force-app/main/default/objects/leaseworks__Fleet_Summary__c/fields/leaseworks__Value_m__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Value_m__c</fullName>
    <label>Value ($M)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>