force-app/main/default/objects/leaseworks__Fleet_Summary__c/fields/leaseworks__Y_Hidden_Parent_Airline__c.field-meta.xml
<CustomField>
    <fullName>leaseworks__Y_Hidden_Parent_Airline__c</fullName>
    <formula>leaseworks__Controlling_Airline_New__r.Name</formula>
    <label>_Parent Airline</label>
    <type>Text</type>
</CustomField>